--- a/WindowsKernel/커널 스택.md
+++ b/WindowsKernel/커널 스택.md
@@ -15,5 +15,20 @@
 그래서 왠만하면 동적으로 할당해서 사용함으로써 스택 버퍼 크기를 작은 상태로 유지를 하는게 좋다고 생각합니다.  
 그리고 커널 스택은 모든 프로세스에 의해 공유되는 시스템 주소 공간에 있습니다.(뭐 그래서 시스템에 영향을 준다고 하는데...)  
 
- 
+커널 모드 스택의 크기는 보통 3페이지 (1페이지 == 4K) 정도로 제한 된다고 하는데 커널 스택에는 여러가지 데이터가 저장됩니다.
+따라서 3페이지의 크기를 다 사용하려고 생각하지 말고 무엇보다 큰 배열이나 구조체와 같은 큰 데이터를
+스택에 정적으로 할당하는 것은 매우 위험함으로 동적 할당을 해서 사용하도록 해야 합니다.
+일반적으로 커널 스택은 메모리에 있지만 스레드가 사용자 모드를 지정하는 대기 상태가 되면 간혹 페이징 아웃 될 수
+있어서 스택 기반 버퍼를 DMA 또는 DISPATCH_LEVEL 이상에서 실행되는 루틴으로 전달할 때 조심해야 합니다.
+
+또한 커널에서는 재귀 호출을 사용하지 않지만 간혹 재귀 호출을 해야 할 경우 그 호출 수를 최소로 제한해야 합니다.
+그래서 재귀 호출은 하지 않는게 가장 좋은데... 간혹 재귀 호출이 필요할 경우에는
+윈도우에서 커널 스택을 동적으로 늘리거나 줄일 수 있는 기능을 제공한다고 합니다.
+(메모리 관리자가 시스템 공간 어디에 있든 상관 없이 가드 페이지에 접근할 경우 다른 스택으로
+건너 뛸 수 있는 기능을 제공한다고 합니다. 즉 다른 스택 메모리를 할당해서 거기로 이동시켜줌)
+그리고 모든 재귀 호출이 종료되면 메모리 관리자는 추가적으로 할당 된 커널 스택을 해제해 준다고 합니다.
+하지만 재귀 호출은 가급적 피하고 메모리는 정적 할당보단 동적 할당을 해서 효율적으로 사용하는 습관을 가지는게 좋은거 같습니다.
+
+
+참고 문헌 : Windows Internals 
 
