--- a/WindowsKernel/시스템 메모리 풀.md
+++ b/WindowsKernel/시스템 메모리 풀.md
@@ -26,3 +26,6 @@
 |:--------:|:--------:|:--------:|:--------:|
 |**<center>넌페이지드</center>** | <center>물리 메모리의 75%나 2GB중 작은 값</center> |*<center>물리 메모리의 75%나 128GB 중 작은 값 </center>* |*<center>15.5TB</center>* |
 |**<center>페이지드</center>** | <center>2GB</center> |*<center>128GB</center>* |*<center>384GB</center>* |
+
+
+참고 문헌 : Windows Internals
