x86 주소 공간 배치

--- a/WindowsKernel/x86 주소 공간 배치.md
+++ b/WindowsKernel/x86 주소 공간 배치.md
@@ -22,6 +22,6 @@ PTE(System Page Table Entry), 시스템 맵 뷰, 파일 시스템 캐시, 파일
 매핑되어서 해당 세션 내의 프로세스들끼리 공유를 하며, 세션 공간 컴포넌트들의 크기는 커널의 다른 시스템 주소 공간과  
 마찬가지로 요청 시 메모리 매니져에 의해 동적으로 구성되고 크기가 재조정 됩니다.  
 
-![이미지](./images/x86세션공간.jpg)  
+![이미지](./images/x86세션공간.jpg){: .align-center}  
 
 참고 문헌 : Windows Internals
