--- a/WindowsKernel/x64 주소 공간 배치.md
+++ b/WindowsKernel/x64 주소 공간 배치.md
@@ -12,10 +12,10 @@
 |  <center>영역</center> |  <center>IA64</center> |  <center>x64</center> | 
 |:--------:|:--------:|:--------:|
 |**<center>프로세스 주소 공간</center>** | *<center>7,152GB</center>* |*<center>8,192GB</center>* |
-|**<center>시스템 PTE 공간</center>** | |*<center>128GB</center>* |*<center>128GB</center>* |
-|**<center>시스템 캐시</center>** | |*<center>1TB</center>* |*<center>1TB</center>* |
-|**<center>페이지드 풀</center>** | |*<center>128GB</center>* |*<center>128GB</center>* |
-|**<center>넌페이지드 풀</center>** | |*<center>물리 메모리의 75%</center>* |*<center>물리 메모리의 75%</center>* |
+|**<center>시스템 PTE 공간</center>** | *<center>128GB</center>* |*<center>128GB</center>* |
+|**<center>시스템 캐시</center>** |*<center>1TB</center>* |*<center>1TB</center>* |
+|**<center>페이지드 풀</center>** | *<center>128GB</center>* |*<center>128GB</center>* |
+|**<center>넌페이지드 풀</center>** |*<center>물리 메모리의 75%</center>* |*<center>물리 메모리의 75%</center>* |
 
 ![이미지](./images/IA64주소공간배치.jpg)  
 
