--- a/WindowsKernel/x86 가상 주소 변환 (2).md
+++ b/WindowsKernel/x86 가상 주소 변환 (2).md
@@ -34,7 +34,7 @@ non-PAE 시스템에서는 가상 주소 0xC0300000에 매핑되어 있습니다
 |:--------:|:--------:|
 |**<center>Accessed</center>** | *<center>페이지가 읽혀졌다.</center>* |
 |**<center>Cache Disabled</center>** | *<center> 페이지에 대한 CPU 캐싱을 비활성화한다.</center>* |
-|**<center>Copy-on-write</center>** |*<center>이 페이지에 대하 Copy-on-write가 사용된다.</center>* |
+|**<center>Copy-on-write</center>** |*<center>이 페이지에 대한 Copy-on-write가 사용된다.</center>* |
 |**<center>더티(Dirty)</center>** | *<center>페이지에 기록이 일어 났다.</center>* |
 |**<center>전역(Global)</center>** |*<center>주소 변환이 모든 프로세스들에 영향을 준다.(예를 들어 변환 버퍼의 플러시는 이 PTE에 영향을 주지 않는다.)</center>* |
 |**<center>Large Page</center>** |*<center>PDE가 4MB(PAE 시스템에서는 2MB)짜리 페이지에 매핑됨을 표시한다.</center>* |
