x64 가상 주소 변환

--- a/WindowsKernel/x64 가상 주소 변환.md
+++ b/WindowsKernel/x64 가상 주소 변환.md
@@ -39,11 +39,8 @@ IA64 용 가상 주소 공간은 하드웨어에 의해 8개 영역으로 나눠
 |**<center>1</center>** | *<center>세션 공간 코드와 데이터</center>* |
 |**<center>2</center>** |*<center>사용되지 않음</center>* |
 |**<center>3</center>** | *<center>사용되지 않음</center>* |
-|**<center>4</center>** |*<center>물리 메모리와 1:1 매핑이 캐시된 Kseg3 영역입니다. 메모리 매니져에 의해 필요한 TLB에 대한
-삽입이 직접 이뤄지므로 이 영역에 대해서는 페이지 테이블이 필요 없습니다.</center>* |
-|**<center>5</center>** |*<center>물리 메모리와 1:1 매핑이 캐시되지 않은 Kseg4 영역입니다. 이 영역은 I/O 포트 범위 같은
-I/O 위치에 접근을 위한 몇개의 공간만을 위해 사용됩니다.
-이 영역에 대해서는 페이지 테이블이 필요 없습니다.</center>* |
+|**<center>4</center>** |*<center>물리 메모리와 1:1 매핑이 캐시된 Kseg3 영역입니다. 메모리 매니져에 의해 필요한 TLB에 대한삽입이 직접 이뤄지므로 이 영역에 대해서는 페이지 테이블이 필요 없습니다.</center>* |
+|**<center>5</center>** |*<center>물리 메모리와 1:1 매핑이 캐시되지 않은 Kseg4 영역입니다. 이 영역은 I/O 포트 범위 같은I/O 위치에 접근을 위한 몇개의 공간만을 위해 사용됩니다. 이 영역에 대해서는 페이지 테이블이 필요 없습니다.</center>* |
 |**<center>6</center>** |*<center>사용되지 않음</center>* |
 |**<center>7</center>** |*<center>커널 코드와 데이터</center>* |
 
