--- a/WindowsKernel/시스템 전역 캐시 데이터 구조.md
+++ b/WindowsKernel/시스템 전역 캐시 데이터 구조.md
@@ -18,9 +18,7 @@
 |**<center>크기</center>** |*<center>32byte</center>* |*<center>64byte</center>* |
 |**<center>VACB 배열</center>** |*<center>4,096</center>* |*<center>2,048</center>* |
 
-<p align="center">
-<img src="./images/캐시데이터구조1.jpg">
-</p>
+![이미지](./images/캐시데이터구조1.jpg)  
 
 각 VACB 배열은 낮은 우선순위 매핑 VACB와 높은 우선 순위 매핑 VACB로 구성됩니다.  
 먼저 시스템은 각 VACB 배열에 최초 64개의 높은 우선 순위 VACB를 할당합니다.  
@@ -33,12 +31,10 @@
 하지만 캐시된 자료를 고정할 때 PIN_HIGH_PRIORITY 플래그를 사용함으로써  
 높은 우선순위 VACB가 대신 사용되게 요청할 수 있습니다.  
 
-<p align="center">
-<img src="./images/캐시데이터구조2.jpg">
-</p>
+![이미지](./images/캐시데이터구조2.jpg)  
 
 |  <center>필드</center> |  <center>설명</center> | 
-|:--------:|:--------:|:--------:|
+|:--------:|:--------:|
 |**<center>①</center>** |*<center>시스템 캐시 내에 있는 데이터에 대한 가상 주소</center>* |
 |**<center>②</center>** |*<center>어떤 파일이 캐시되었는지 구분하기 위한 고유 캐시맵 구조체를 가리키는 포인터</center>* |
 |**<center>③</center>** |*<center>뷰가 시작되는 파일 내의 오프셋을 나타내며(항상 256KB 단위), 하위 16비트는 항상 0 임,<br>이 비트(액티브 카운트)는 뷰에 대한 참조 수를 저장하기 위해 재사용 됨</center>* |
