--- a/WindowsKernel/시스템 전역 캐시 데이터 구조.md
+++ b/WindowsKernel/시스템 전역 캐시 데이터 구조.md
@@ -13,10 +13,10 @@
 배열을 이용해 시스템 캐시에 있는 뷰들의 상태를 추적 관리 합니다.  
 
 ## 가상 주소 제어 블록 VACB  
-|  <center></center> |  <center>32bit</center> |  <center>64bit</center> | 
+|   |  <center>32bit</center> |  <center>64bit</center> | 
 |:--------:|:--------:|:--------:|
-|**<center>크기</center>** |*<center>32byte</center>* |*<center>64byte</center>* |
-|**<center>VACB 배열</center>** |*<center>4,096</center>* |*<center>2,048</center>* |
+|**<center> 크기 </center>** |*<center> 32byte </center>* |*<center> 64byte </center>* |
+|**<center> VACB 배열 </center>** |*<center> 4,096개 </center>* |*<center> 2,048개 </center>* |
 
 ![이미지](./images/캐시데이터구조1.jpg)  
 
@@ -31,7 +31,9 @@
 하지만 캐시된 자료를 고정할 때 PIN_HIGH_PRIORITY 플래그를 사용함으로써  
 높은 우선순위 VACB가 대신 사용되게 요청할 수 있습니다.  
 
-![이미지](./images/캐시데이터구조2.jpg)  
+<p align="center">
+<img src="./images/캐시데이터구조2.jpg">
+</p>
 
 |  <center>필드</center> |  <center>설명</center> | 
 |:--------:|:--------:|
