--- a/WindowsKernel/시스템 전역 캐시 데이터 구조.md
+++ b/WindowsKernel/시스템 전역 캐시 데이터 구조.md
@@ -31,9 +31,7 @@
 하지만 캐시된 자료를 고정할 때 PIN_HIGH_PRIORITY 플래그를 사용함으로써  
 높은 우선순위 VACB가 대신 사용되게 요청할 수 있습니다.  
 
-<p align="center">
-<img src="./images/캐시데이터구조2.jpg">
-</p>
+![이미지](./images/캐시데이터구조2.jpg)  
 
 |  <center>필드</center> |  <center>설명</center> | 
 |:--------:|:--------:|
