현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법

--- a/Windows Driver & Technologies/현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법.md
+++ b/Windows Driver & Technologies/현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법.md
@@ -24,11 +24,12 @@ void ObDereferenceObject(
 ```
 
 이렇게 PsLookupProcessByProcessId API를 호출하여 부모 프로세스의 EPROCESS 포인터를 획득합니다.  
-그리고 난 다음에 부모 프로세스에 Attach를 해줘야 합니다.  
+그리고 난 다음에 부모 프로세스에 현재 스레드를 Attach를 해줘야 합니다.  
 그러기 위해서 호출 되는 API는 바로 KeStackAttachProcess API 입니다.   
 이 후 기존에 PEB에 접근하는 방식으로 EPROCESS 포인터를 조작하여  
 프로세스의 ImagePath를 획득 하면 됩니다.  
-그리고 나중에는 KeUnstackDetachProcess API를 호출하여 Detach를 해줘야 합니다.  
+그리고 나중에는 KeUnstackDetachProcess API를 호출하여  
+마찬가지로 부모 프로세스로부터 현재 스레드를 Detach를 해줘야 합니다.  
 
 ```c
 void KeStackAttachProcess(
