Revert "현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법"
This reverts commit 6ab6e4566859af404562f4023131ba3cbc005a46.

--- a/Windows Driver & Technologies/현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법.md
+++ b/Windows Driver & Technologies/현재 실행된 프로세스의 부모 프로세스 전체 경로 획득하는 방법.md
@@ -53,14 +53,14 @@ ULONG ProcessGetParentPath(ULONG ProcessId, PWCHAR ParentPathW)
 
 	if (ParentPId == 0) return 0;
 
-	Status = PsLookupProcessByProcessId(UlongToPtr(ParentPId), &pProcess); # 부모 프로세스의 EPROCESS 획득
+	Status = PsLookupProcessByProcessId(UlongToPtr(ParentPId), &pProcess);
 	if (Status == STATUS_SUCCESS && pProcess != NULL) {
 		KAPC_STATE APCState;
 
-		KeStackAttachProcess((PRKPROCESS)pProcess, &APCState); # 부모 프로세스에 현재 스레드 Attach
+		KeStackAttachProcess((PRKPROCESS)pProcess, &APCState);
 		GetProcessFullPath(pProcess, ParentPathW); # PEB에 접근하여 IamgePath 획득
-		KeUnstackDetachProcess(&APCState); # 작업이 끝났음으로 부모 프로세스에서 현재 스레드 Detach
-		ObDereferenceObject(pProcess); # 참조 카운트 감소
+		KeUnstackDetachProcess(&APCState);
+		ObDereferenceObject(pProcess);
 	}
 
 	return ParentPId;
